Code Reformated Added Enemy Choosing View